2018-12-09  Ben Elliston  <bje@gnu.org>

	* baseboards/androideabi.exp: Remove unnecessary quotes and braces
	around variable expansions.
	* baseboards/basic-sid.exp: Likewise.
	* baseboards/cris-sim.exp: Likewise.
	* baseboards/generic-sim.exp: Likewise.
	* baseboards/mcore-moto-sim.exp: Likewise.
	* baseboards/multi-sim.exp: Likewise.

2018-12-08  Ben Elliston  <bje@gnu.org>

	* NEWS: Tweak.

2018-12-08  Ben Elliston  <bje@gnu.org>

	* lib/dejagnu.exp (host_execute): Remove unnecessary quotes around
	variable expansions.
	* testsuite/runtest.all/clone_output.test: Likewise.
	* testsuite/runtest.all/target.test: Likewise.
	* testsuite/runtest.all/stats.exp: Likewise.
	* testsuite/runtest.all/remote.test: Likewise.
	* testsuite/runtest.all/config.test: Likewise.
	* testsuite/runtest.all/default_procs.tcl: Likewise.
	* testsuite/runtest.all/libs.exp: Likewise.
	* testsuite/runtest.all/options.exp: Likewise.

2018-12-08  Jacob Bachmeyer  <jcb62281@gmail.com>

	* NEWS: Document 'testsuite' command.
	* doc/dejagnu.texi (testsuite procedure): Document multiplex entry
	point and "testsuite file" command.
	* lib/framework.exp (testsuite): New proc for multiplex commands.
	(testsuite_file): New proc implementing "testsuite file".
	* testsuite/runtest.all/testsuite_file.test: New file.
	* runtest.exp: Expect to find testsuite in ${srcdir}/testsuite,
	but also search $srcdir itself.
	(load_lib): Add explicit search for testsuite-local libraries.
	(load_tool_init): Use $testsuitedir in search.
	(load_config): Use $testsuitedir instead of $srcdir.
	(load_tool_target_config): Likewise.

	Add variable "testsuitedir" for testsuite root directory.

	Add internal global variables "testbuilddir" and "testdir" for use
	by "testsuite file".

	Ensure that $testsuitedir, $testbuilddir, and $objdir also avoid
	duplicated path delimiters.

	Add warning if no tests are found and fallback method of searching
	$srcdir is used.

2018-12-08  Ben Elliston  <bje@gnu.org>
